[gd_scene load_steps=23 format=3 uid="uid://dvygun7k256ji"]

[ext_resource type="Script" uid="uid://cejra01sesexs" path="res://code/hudOverlay.gd" id="1_nlpga"]
[ext_resource type="PackedScene" uid="uid://cuw4yq5y387x7" path="res://scenes/mouse_hider.tscn" id="2_4haxn"]
[ext_resource type="Script" uid="uid://x3fy3h0u3pd" path="res://code/dialogScript.gd" id="2_p562y"]
[ext_resource type="AudioStream" uid="uid://dlvfs6xlorf1j" path="res://assets/sounds/sfx_Typewriter.ogg" id="3_o5wnl"]
[ext_resource type="AudioStream" uid="uid://m50mdiae1c0m" path="res://assets/sounds/sfx_PlayerVoice.ogg" id="4_nda3g"]
[ext_resource type="AudioStream" uid="uid://ccdb1xll6wbh2" path="res://assets/sounds/sfx_EnemyVoice.ogg" id="5_oijn2"]
[ext_resource type="Texture2D" uid="uid://b6fy8mvm3d5ht" path="res://assets/sprites/progressBar/ProgressBar.png" id="6_5qawj"]
[ext_resource type="Script" uid="uid://dxkw4w07yteqe" path="res://code/tutorialScript.gd" id="8_rd4og"]
[ext_resource type="PackedScene" uid="uid://4ks3n2hoau7c" path="res://scenes/touch_button_with_sfx.tscn" id="8_rg1go"]
[ext_resource type="Texture2D" uid="uid://ur4cwlbgq8hv" path="res://assets/sprites/progressBar/HolyProgressBar.png" id="8_ynm7x"]
[ext_resource type="Script" uid="uid://bynw1j0xsgbmc" path="res://code/pauseMenuScript.gd" id="9_ompl7"]
[ext_resource type="PackedScene" uid="uid://bnmu8y7sw3xs6" path="res://scenes/button_with_sfx.tscn" id="10_ly6oa"]
[ext_resource type="Theme" uid="uid://8pxr3vfc2jme" path="res://scenes/MainMenu/MenuTheme.tres" id="10_rg1go"]
[ext_resource type="PackedScene" uid="uid://d0uw87hj0h1b8" path="res://scenes/MainMenu/tutorialText.tscn" id="11_qerle"]

[sub_resource type="SystemFont" id="SystemFont_baf6o"]
font_italic = true
subpixel_positioning = 0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mc56r"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6rxup"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="GDScript" id="GDScript_covti"]
resource_name = "michiMakesProgress"
script/source = "extends TextureProgressBar	

func update(score: float, maxScore: int) -> void:
	var percentage: int = floori(score * 100 / maxScore);
	#print(\"Score: %s, MaxScore: %s, Percentage: %s\" % [score, maxScore, percentage])
	self.value = percentage
"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eh6jv"]
content_margin_left = 8.0
bg_color = Color(0, 0, 0, 0.788235)

[sub_resource type="LabelSettings" id="LabelSettings_86xpp"]
font_size = 100
font_color = Color(1, 0.313726, 0.223529, 1)
shadow_size = 10
shadow_color = Color(1, 0.311, 0.22, 0.309804)

[sub_resource type="GDScript" id="GDScript_7wjds"]
script/source = "extends Label

func update(timeArray: Array) -> void:
	#print(timeArray);
	text = \"%02d:%02d:%02d\" % timeArray
"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tsvbg"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
expand_margin_left = 12.0
expand_margin_right = 12.0

[node name="HudOverlay" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nlpga")

[node name="MouseHider" parent="." instance=ExtResource("2_4haxn")]

[node name="DialogLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false
script = ExtResource("2_p562y")

[node name="DialogLabel" type="Label" parent="DialogLayer"]
unique_name_in_owner = true
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.99
anchor_right = 0.5
anchor_bottom = 0.99
offset_left = -7.0
offset_top = -57.0
offset_right = 2.0
offset_bottom = -34.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("SystemFont_baf6o")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_mc56r")
horizontal_alignment = 1
vertical_alignment = 1

[node name="NarratorAudio" type="AudioStreamPlayer" parent="DialogLayer"]
unique_name_in_owner = true
stream = ExtResource("3_o5wnl")

[node name="PlayerVoiceAudio" type="AudioStreamPlayer" parent="DialogLayer"]
stream = ExtResource("4_nda3g")

[node name="EnemyVoiceAudio" type="AudioStreamPlayer" parent="DialogLayer"]
stream = ExtResource("5_oijn2")

[node name="BackgroundLabel" type="Label" parent="DialogLayer"]
visible = false
z_index = -2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_6rxup")

[node name="IngameLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="FightProgressBar" type="TextureProgressBar" parent="IngameLayer"]
unique_name_in_owner = true
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1670.0
offset_top = -920.0
offset_right = 330.0
offset_bottom = 1080.0
grow_horizontal = 0
rounded = true
texture_under = ExtResource("6_5qawj")
texture_progress = ExtResource("8_ynm7x")
script = SubResource("GDScript_covti")

[node name="TimerLabel" type="Label" parent="IngameLayer"]
unique_name_in_owner = true
anchors_preset = -1
anchor_left = 0.01
anchor_top = 0.01
anchor_right = 0.01
anchor_bottom = 0.01
offset_right = 334.0
offset_bottom = 134.0
theme_override_styles/normal = SubResource("StyleBoxFlat_eh6jv")
text = "0:00:00"
label_settings = SubResource("LabelSettings_86xpp")
script = SubResource("GDScript_7wjds")

[node name="PauseButton" parent="IngameLayer" instance=ExtResource("8_rg1go")]
position = Vector2(1868, 1020)

[node name="TutorialLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false
script = ExtResource("8_rd4og")

[node name="Background" type="ColorRect" parent="TutorialLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.882353)

[node name="DialogContainer" type="CenterContainer" parent="TutorialLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("10_rg1go")

[node name="DialogBox" type="VBoxContainer" parent="TutorialLayer/DialogContainer"]
z_index = 1
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="TutorialLayer/DialogContainer/DialogBox"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="PanelContainer" type="PanelContainer" parent="TutorialLayer/DialogContainer/DialogBox/ScrollContainer"]
custom_minimum_size = Vector2(944, 470)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TutorialLabel2" parent="TutorialLayer/DialogContainer/DialogBox/ScrollContainer/PanelContainer" instance=ExtResource("11_qerle")]
unique_name_in_owner = true
layout_mode = 2

[node name="GotItBtn" parent="TutorialLayer/DialogContainer/DialogBox" instance=ExtResource("10_ly6oa")]
unique_name_in_owner = true
layout_mode = 2
text = "Alright, got it"

[node name="PauseMenuLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false
script = ExtResource("9_ompl7")

[node name="Background" type="ColorRect" parent="PauseMenuLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.882353)

[node name="DialogContainer" type="CenterContainer" parent="PauseMenuLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("10_rg1go")

[node name="DialogBox" type="Panel" parent="PauseMenuLayer/DialogContainer"]
z_index = 1
custom_minimum_size = Vector2(960, 400)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tsvbg")

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenuLayer/DialogContainer/DialogBox"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -50.5
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="MenuTitle" type="Label" parent="PauseMenuLayer/DialogContainer/DialogBox/VBoxContainer"]
z_index = 10
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Paused Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResumeBtn" parent="PauseMenuLayer/DialogContainer/DialogBox/VBoxContainer" instance=ExtResource("10_ly6oa")]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_bottom = NodePath("../TutorialBtn")

[node name="TutorialBtn" parent="PauseMenuLayer/DialogContainer/DialogBox/VBoxContainer" instance=ExtResource("10_ly6oa")]
layout_mode = 2
focus_neighbor_top = NodePath("../ResumeBtn")
focus_neighbor_bottom = NodePath("../MainMenuBtn")
text = "Show Tutorial"

[node name="MainMenuBtn" parent="PauseMenuLayer/DialogContainer/DialogBox/VBoxContainer" instance=ExtResource("10_ly6oa")]
layout_mode = 2
focus_neighbor_top = NodePath("../TutorialBtn")
text = "Back to Main Menu
"

[connection signal="currentEntity" from="DialogLayer" to="." method="_on_dialog_layer_current_entity"]
[connection signal="dialogCompleted" from="DialogLayer" to="." method="_on_dialog_layer_dialog_completed"]
[connection signal="closeTutorial" from="TutorialLayer" to="." method="hideTutorial"]
[connection signal="resumeGame" from="PauseMenuLayer" to="." method="_on_pause_menu_layer_resume_game"]
[connection signal="returnToMenu" from="PauseMenuLayer" to="." method="_on_pause_menu_layer_return_to_menu"]
[connection signal="showTutorial" from="PauseMenuLayer" to="." method="_on_pause_menu_layer_show_tutorial"]
